# Group_3_Travel-Agency-Management-System

./: CMakeLists.txt  README.md  Travel_system_config
data/: 001.txt  002.txt  004.txt  Clients.txt  bookingID_template.txt  client.txt  clients.txt  view_brochure.txt
doc/: doxygen_log.txt
doc/html/: add__passenger_8c.html  add__passengers_8h.html  add__passengers_8h_source.html  annotated.html  book__trip_8c.html  book__trip_8h.html  book__trip_8h_source.html  cancel__trip_8c.html  cancel__trip_8h.html  cancel__trip_8h_source.html  classes.html  client__model_8h.html  client__model_8h_source.html  dir_2254ed4c86842eb07fcb8e0eac2ef2c8.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_95e29a8b8ee7c54052c171a88bb95675.html  dir_cb8aebdcbcd7898634ff25bad2892a2f.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_f89abcb304c928c7d889aa5625570de5.html  empty.c  files.html  global__variable_8h.html  index.html  (+39 more)
include/: add_passengers.h  book_car.h  book_hotel.h  book_hotel_car.h  book_trip.h  cancel_trip.h  car.h  client_model.h  discount_offer_1.h  discount_offer_2.h  flight.h  global_variable.h  hotel.h  individual_route_prices.h  main.h  main_menu.h  sign_up.h  total_fare.h  total_fare_car.h  total_fare_flight.h  total_fare_hotel.h  total_fare_trip.h  trip_available.h  trip_information.h  user_login.h  user_logout.h  validate_car_id.h  validate_hotel_id.h  validate_id.h  validate_route_id.h  view_brochure.h  view_print_trip.h
src/: add_passenger.c  book_car.c  book_hotel.c  book_hotel_car.c  book_trip.c  cancel_trip.c  car.c  discount_offer_1.c  discount_offer_2.c  flight.c  global_variables.c  hotel.c  individual_route_prices.c  main.c  main_menu.c  sign_up.c  total_fare.c  total_fare_car.c  total_fare_flight.c  total_fare_hotel.c  total_fare_trip.c  trip_available.c  trip_information.c  user_login.c  user_logout.c  validate_car_id.c  validate_hotel_id.c  validate_id.c  validate_route_id.c  view_brochure.c  view_print_trip.c
(+135 files in other folders)
