cmake_minimum_required(VERSION 3.20)
project(Project_Program C)
project(Program_Test C)

set(CMAKE_C_STANDARD 99)
include_directories(include)
include_directories(src)
include_directories(test/include)
include_directories(test/src)
add_executable(Project_Program src/add_passenger.c src/main.c src/book_trip.c src/cancel_trip.c src/individual_route_prices.c src/main_menu.c src/sign_up.c src/total_fare.c src/trip_available.c src/user_login.c src/validate_id.c src/view_brochure.c src/view_print_trip.c include/client_model.h include/global_variable.h include/book_trip.h include/cancel_trip.h include/individual_route_prices.h include/main_menu.h include/sign_up.h include/total_fare.h include/trip_available.h include/user_login.h include/validate_id.h include/view_brochure.h include/view_print_trip.h include/individual_route_prices.h src/global_variables.c)
add_executable(Program_Test test/src/testmain.c test/src/test_sign_up.c test/src/log_file.c test/src/test_id.c test/src/test_booking_id.c)